# nautilus-image-converter-gnome43plus

./: ChangeLog  NEWS  README  meson.build
data/: meson.build  nautilus-image-resize.ui  nautilus-image-rotate.ui
po/: LINGUAS  da.po  fr.po  gl.po  hu.po  ro.po  sv.po
src/: image-converter.c  meson.build  nautilus-image-converter.c  nautilus-image-resizer.c  nautilus-image-rotator.c
